Refactor UI components and enhance functionality for debate management
- Updated CSS styles for improved layout and responsiveness.
- Refactored HTML structure to separate header, controls, sidebar, and main feed.
- Implemented loading indicators for better user experience during debates.
- Enhanced JavaScript functionality for mode toggling, loading history, and generating scenarios.
- Improved event handling for debate start, stop, and session management.
- Added new sidebar tabs for history, projects, and knowledge with dynamic content loading.